--- a/e-bidding/views/register.ejs
+++ b/e-bidding/views/register.ejs
@@ -6,5 +6,13 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required><br>
 
+    <label for="confirm">Confirm password:</label>
+    <input type="password" id="confirm" name="confirm" required><br>
+    
+    <img src="captcha/<%= captchaId %>" style="display: block;">
+    <label for="captcha">Enter the code above:</label>
+    <input type="text" id="captcha" name="captcha" required><br>
+    <input type="hidden" id="captchaId" name="captchaId" value="<%= captchaId %>">
+
     <button type="submit">Register</button>
 </form>
