--- a/e-bidding/views/item_details.ejs
+++ b/e-bidding/views/item_details.ejs
@@ -1,4 +1,5 @@
 <h2><%= item.name %></h2>
+<img src="<%= item.image_url %>" alt="<%= item.name %>" style="max-width: 300px; height: auto;">
 <p><strong>Description:</strong> <%= item.description %></p>
 <p><strong>Price:</strong> $<%= item.starting_price %></p>
 <p><strong>Type:</strong> <%= item.type %></p>
