--- a/e-bidding/views/redirect.ejs
+++ b/e-bidding/views/redirect.ejs
@@ -1,9 +1,9 @@
-<h2><%= message %></h2>
+<h2><%= message %> Success</h2>
 <p><%= details %></p>
-<p>Redirecting in <span id="countdown"><%= seconds %></span> seconds...</p>
+<p>You will be redirected in <span id="countdown">5</span> seconds.</p>
 
 <script>
-    let seconds = <%= seconds %>;
+    let seconds = 5;
     const countdownElement = document.getElementById('countdown');
     const countdownInterval = setInterval(() => {
         seconds--;
