--- a/e-bidding/views/login.ejs
+++ b/e-bidding/views/login.ejs
@@ -7,4 +7,8 @@
     <input type="password" id="password" name="password" required><br>
 
     <button type="submit">Login</button>
+    
+    <% if (typeof error !== 'undefined') { %>
+        <p style="color: red">Error: <%= error %></p>    
+    <% } %>
 </form>
