--- a/e-bidding/views/redirect.ejs
+++ b/e-bidding/views/redirect.ejs
@@ -1,4 +1,4 @@
-<h2><%= message %> Success</h2>
+<h2><%= message %></h2>
 <p><%= details %></p>
 <p>You will be redirected in <span id="countdown">5</span> seconds.</p>
 
