--- a/e-bidding/views/layout.ejs
+++ b/e-bidding/views/layout.ejs
@@ -18,6 +18,7 @@
                     <% } else { %>
                         <a href="/items/add">Add Listing</a>
                         <a href="/user/dashboard">Dashboard</a>
+                        <a href="/support">Support</a>
                     <% } %>
                 <% } else { %>
                     <a href="/auth/login">Login</a>
