--- a/e-bidding/views/item_details.ejs
+++ b/e-bidding/views/item_details.ejs
@@ -51,7 +51,7 @@
         <% if (review) { %>
             <div class="review">
                 <p><strong>Rating:</strong> <%= review.rating %>/5</p>
-                <strong>By:</strong> <%= review.reviewer_name %><br>
+                <!-- <strong>By:</strong> <%= review.reviewer_name %><br> -->
                 <strong>Review:</strong> <%= review.description %>
             </div>
         <% } else { %>
