--- a/e-bidding/views/user_dashboard.ejs
+++ b/e-bidding/views/user_dashboard.ejs
@@ -1,11 +1,12 @@
 <h2>Welcome, <%= username %></h2>
+
+<% if (error) { %>
+    <p style="color: red;"><%= error %></p>
+<% } %>
+
 <p><strong>Overall Rating:</strong> <%= rating ? `${rating}/5` : 'No ratings yet' %></p>
 <p><strong>Account Status:</strong> <%= is_vip ? 'VIP' : 'Regular User' %></p>
 <p><strong>Balance:</strong> $<%= balance %></p>
-
-<% if (error) { %>
-    <div class="error"><%= error %></div>
-<% } %>
 
 <% if (success) { %>
     <div class="success"><%= success %></div>
