--- a/e-bidding/views/items.ejs
+++ b/e-bidding/views/items.ejs
@@ -5,10 +5,9 @@
             <% if (item.image_url) { %>
                 <img src="<%= item.image_url %>" alt="<%= item.name %>" style="width: 100%; height: auto;">
             <% } %>
-            <h3><%= item.name %></h3>
-            <p><strong>Type:</strong> <%= item.type %></p>
-            <p><strong>Starting Price:</strong> $<%= item.starting_price %></p>
-            <p><strong>Deadline:</strong> <%= item.deadline_date %></p>
+            <h3><span class="<%= item.type %>">For <%= item.type %>:</span> <%= item.name %></h3>
+            <p><strong>Starting Price:</strong> $<%= item.starting_price.toLocaleString() %></p>
+            <p><strong>Deadline:</strong> <time datetime="<%= item.deadline_date %>"></time></p>
             <a href="/items/<%= item.id %>">View Details</a>
         </div>
     <% }) %>
