--- a/e-bidding/views/home.ejs
+++ b/e-bidding/views/home.ejs
@@ -1,2 +1,2 @@
-<h2>Welcome to the E-Bidding System</h2>
+<h2>Welcome to E-Bidding by Team X!</h2>
 <p>Here you can browse listings, add new items, and more.</p>
