--- a/e-bidding/views/items.ejs
+++ b/e-bidding/views/items.ejs
@@ -3,7 +3,7 @@
     <% items.forEach(item => { %>
         <div style="border: 1px solid #ccc; padding: 1rem; width: 300px;">
             <% if (item.image_url) { %>
-                <img src="<%= item.image_url %>" alt="<%= item.name %>" style="width: 100%; height: auto;">
+                <img src="<%= item.image_url %>" alt="<%= item.name %>" style="width: 100%; height: 300px; object-fit: contain;">
             <% } %>
             <h3><span class="<%= item.type %>">For <%= item.type %>:</span> <%= item.name %></h3>
             <p><strong>Starting Price:</strong> $<%= item.starting_price.toLocaleString() %></p>
