--- a/e-bidding/views/user_dashboard.ejs
+++ b/e-bidding/views/user_dashboard.ejs
@@ -66,7 +66,7 @@
             <li>
                 <%= transaction.type.charAt(0).toUpperCase() + transaction.type.slice(1) %>:
                 $<%= transaction.amount.toLocaleString() %>
-                (<%= new Date(transaction.date).toLocaleString() %>)
+                (<time datetime="<%= transaction.date %>"></time>)
             </li>
         <% }) %>
     </ul>
